--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ body {
     line-height: 1.6;
     opacity: 0; /* Hidden initially, shown after preloader */
     transition: opacity 0.5s;
+    font-size: 28px;
 }
 
 /* Base Link Styling */
@@ -196,9 +197,7 @@ a:hover {
 }
 
 
-/* ================================================= */
 /* 4. HEADER / NAVIGATION */
-/* ================================================= */
 
 .header {
     background: var(--primary-color);
@@ -220,8 +219,9 @@ a:hover {
 }
 
 .logo img {
-    height: 50px; 
+    height: 100px; 
     width: auto;
+    border-radius: 50%;
 }
 
 .nav a {
@@ -351,6 +351,22 @@ a:hover {
 
 .card-content a:hover {
     border-bottom-color: var(--contrast-accent);
+}
+
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; 
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -667,7 +683,7 @@ a:hover {
 .img-desc img {
     width: 40%;
     min-width: 300px;
-    height: 400px;
+    height: 800px;
     object-fit: cover;
     border-radius: var(--border-radius);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
